--- a/Aula-09-PWFE/css/modal.css
+++ b/Aula-09-PWFE/css/modal.css
@@ -56,13 +56,43 @@
 .modal-form{
     display: flex;
     justify-content: space-between;
-    flex-wrap: wrap;
     gap: 20px;
     padding: 0 20px;
 }
 
+.model-image-container{
+    position: relative;
+    width: 300px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+#modal-image-input{
+display: none;
+}
+
+#madal-image-label{
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    cursor: pointer;
+}
+
+#modal-image{
+    width: 100%;
+    height: 100%;
+}
+
+.modal-field-container{
+    display: flex;
+    flex-direction: column;
+    gap: 5px;
+    flex-grow: 1;
+}
+
 .modal-field{
-    width: calc(50% - 10px);
+    width: 100%;
     height: 40px;
     outline-style: none;
     border-style: none;
